# PlaylistChaser.Api/swagger.json
@@ -5,7 +5,38 @@
     "version": "1.0"
   },
   "paths": {
-    "/api/Playlist": {
+    "/api/Account/register-user": {
+      "post": {
+        "tags": [
+          "Account"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterUserModel"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterUserModel"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterUserModel"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/Playlist/get-all-playlists": {
       "get": {
         "tags": [
           "Playlist"
@@ -65,20 +96,74 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/Playlist"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/Playlist"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/Playlist"
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/Playlist/add-playlist": {
+      "put": {
+        "tags": [
+          "Playlist"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddPlaylistModel"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddPlaylistModel"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddPlaylistModel"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/Playlist/remove-playlist/{id}": {
+      "put": {
+        "tags": [
+          "Playlist"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -86,6 +171,19 @@
   },
   "components": {
     "schemas": {
+      "AddPlaylistModel": {
+        "required": [
+          "playlistUrl"
+        ],
+        "type": "object",
+        "properties": {
+          "playlistUrl": {
+            "minLength": 1,
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
       "Playlist": {
         "required": [
           "channelName",
@@ -109,8 +207,10 @@
           },
           "thumbnailId": {
             "type": "integer",
-            "format": "int32",
-            "nullable": true
+            "format": "int32"
+          },
+          "thumbnail": {
+            "$ref": "#/components/schemas/Thumbnail"
           },
           "playlistTypeId": {
             "$ref": "#/components/schemas/PlaylistTypes"
@@ -140,6 +240,25 @@
         "type": "integer",
         "format": "int32"
       },
+      "RegisterUserModel": {
+        "required": [
+          "email",
+          "password"
+        ],
+        "type": "object",
+        "properties": {
+          "email": {
+            "minLength": 1,
+            "type": "string",
+            "format": "email"
+          },
+          "password": {
+            "minLength": 1,
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
       "Sources": {
         "enum": [
           1,
@@ -147,6 +266,27 @@
         ],
         "type": "integer",
         "format": "int32"
+      },
+      "Thumbnail": {
+        "required": [
+          "fileContents"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "fileContents": {
+            "type": "string",
+            "format": "byte"
+          },
+          "url": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
       },
       "User": {
         "type": "object",
