# PlaylistChaser.Model/RequestModels/AddPlaylistModel.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace PlaylistChaser.Model
+{
+    public class AddPlaylistModel
+    {
+        [Required]
+        public string PlaylistUrl { get; set; }
+
+    }
+}
